k8s/manifests/life-dashboard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: life-dashboard
  namespace: life-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: life-dashboard
  template:
    metadata:
      labels:
        app: life-dashboard
    spec:
      nodeName: k3s-control-1
      containers:
        - name: life-dashboard
          image: ghcr.io/immaribeiro/life-dashboard:latest
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: data
              mountPath: /data
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: life-dashboard-data
